# aoc2021

./: Cargo.toml
day-template/: Cargo.toml.tmpl
day-template/src/: lib.rs.tmpl  main.rs.tmpl
day01/: Cargo.toml
day01/src/: lib.rs  main.rs
day02/: Cargo.toml
day02/src/: lib.rs  main.rs
day03/: Cargo.toml
day03/src/: lib.rs  main.rs
day04/: Cargo.toml
day04/src/: lib.rs  main.rs
day05/: Cargo.toml
day05/src/: lib.rs  main.rs
day06/: Cargo.toml
day06/src/: lib.rs  main.rs
day07/: Cargo.toml
day07/src/: lib.rs  main.rs
src/: config.rs  day.rs  input.rs  lib.rs  main.rs  utils.rs
