[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
dirs = "4.0.0"
path-absolutize = "3.0.11"
reqwest = { version = "0.11.7", features = ["blocking", "gzip", "cookies"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
structopt = "0.3.25"
thiserror = "1.0.30"
tinytemplate = "1.2.1"
toml_edit = "0.10.0"

[workspace]
members = ["day01"]
